webstrom链接github二次测试提交

--- a/index.html
+++ b/index.html
@@ -4,14 +4,25 @@
     <meta charset="UTF-8">
     <title>52Game</title>
     <style>
-        div{
+        div:nth-child(1){
+              width: 100px;
+              height: 100px;
+              background-color: red;
+          }
+        div:nth-child(2){
             width: 100px;
             height: 100px;
-            background-color: red;
+            background-color: blue;
+        }
+        div:nth-child(3){
+            width: 100px;
+            height: 100px;
+            background-color: green;
         }
     </style>
 </head>
 <body>
+<div></div>
 <div></div>
 <div></div>
 </body>
