清除默认边距

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>52Game</title>
+    <link rel="stylesheet" href="CSS/base.css">
     <style>
         div:nth-child(1){
               width: 100px;
