导入css.reset文件and导入网页公共样式表css.base文件and创建title图标icon

--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>52Game</title>
+    <title>52Game 玩你所想!!!</title>
+    <!--title前图标-->
+    <link rel="shortcut icon" href="images/favicon.ico">
+    <link rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="CSS/base.css">
     <style>
         div:nth-child(1){
