--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>52Game 玩你所想!!!</title>
     <!--title前图标-->
-    <link rel="icon" href="images/favicon.ico">
+    <link rel="icon" type="image/ico" sizes="16x16" href="images/favicon.ico">
     <link rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="CSS/base.css">
     <style>
