网页基本结构搭建

--- a/index.html
+++ b/index.html
@@ -4,30 +4,20 @@
     <meta charset="UTF-8">
     <title>52Game 玩你所想!!!</title>
     <!--title前图标-->
-    <link rel="icon" type="image/ico" sizes="16x16" href="images/favicon.ico">
+    <link rel="icon" href="images/favicon.ico">
     <link rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="CSS/base.css">
-    <style>
-        div:nth-child(1){
-              width: 100px;
-              height: 100px;
-              background-color: red;
-          }
-        div:nth-child(2){
-            width: 100px;
-            height: 100px;
-            background-color: blue;
-        }
-        div:nth-child(3){
-            width: 100px;
-            height: 100px;
-            background-color: green;
-        }
-    </style>
+    <link rel="stylesheet" href="CSS/index.css">
 </head>
 <body>
-<div></div>
-<div></div>
-<div></div>
+<!---------------------------------头部开始----------------------------->
+<header></header>
+<!---------------------------------头部结束------------------------------>
+<!------------------------------中间内容开始-->
+<div class="content"></div>
+<!------------------------------中间内容结束----------------------------->
+<!-------------------------------底部开始--------------------------------->
+<footer></footer>
+<!-------------------------------底部结束--------------------------------->
 </body>
 </html>
