项目远程更新

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>52Game 玩你所想!!!</title>
+    <title>年轻即活力</title>
     <!--title前图标-->
     <link rel="icon" href="images/favicon.ico">
     <link rel="stylesheet" href="CSS/reset.css">
