header的特效实现

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <header>
     <a href="#"><p><span>Y</span>oung</p></a>
     <ul>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Game</a></li>
+        <li><a href="#">Style</a></li>
+        <li><a href="#">About</a></li>
     </ul>
 </header>
 <!---------------------------------头部结束------------------------------>
