header的文字大小字体修改

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body>
 <!---------------------------------头部开始----------------------------->
 <header>
-    <a href="#"><p><span>Y</span>oung</p></a>
+    <div class="box">
+        <p><a href="#">Young</a></p>
+    </div>
     <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#">Game</a></li>
