网页底部完成

--- a/index.html
+++ b/index.html
@@ -27,7 +27,20 @@
 <div class="content"></div>
 <!------------------------------中间内容结束----------------------------->
 <!-------------------------------底部开始--------------------------------->
-<footer></footer>
+<footer>
+    <div class="footer">
+        <div class="search"><input type="text"><button>Search</button></div>
+        <div class="link">
+            <a href="#"><img src="images/qq.png" alt=""></a>
+            <a href="#"><img src="images/weibo.png" alt=""></a>
+            <a href="#"><img src="images/link.png" alt=""></a>
+            <a href="#"><img src="images/twiter.png" alt=""></a>
+        </div>
+        <div class="bq">
+          <p>  2017 Young For You版权所有&copy;</p>
+        </div>
+    </div>
+</footer>
 <!-------------------------------底部结束--------------------------------->
 </body>
 </html>
