添加2048和贪吃蛇游戏

--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
 
                 <div class="col" ontouchstart="this.classList.toggle('hover');">
                     <div class="container">
-                        <div class="front" style="background-image: url(images/1.jpg)">
+                        <div class="front" style="background-image: url(images/2048.jpg)">
                             <div class="inner">
-                                <p>Diligord</p>
-                                <span>Lorem ipsum</span>
+                                <p>2048</p>
+                                <span>Intelligence</span>
                             </div>
                         </div>
                         <div class="back">
                             <div class="inner">
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+                                <a href="2048.html"> <p>《2048》是一款比较流行的数字游戏。这款游戏是新型数字游戏。点击开始游戏。</p></a>
                             </div>
                         </div>
                     </div>
@@ -54,15 +54,15 @@
 
                 <div class="col" ontouchstart="this.classList.toggle('hover');">
                     <div class="container">
-                        <div class="front" style="background-image:url(images/2.jpg)">
+                        <div class="front" style="background-image:url(images/GS.jpg)">
                             <div class="inner">
-                                <p>Rocogged</p>
-                                <span>Lorem ipsum</span>
+                                <p>Happy Snake</p>
+                                <span>Relaxation</span>
                             </div>
                         </div>
                         <div class="back">
                             <div class="inner">
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+                                <a href="GS.html"> <p>贪吃蛇游戏是一款经典的益智游戏。该游戏通过控制蛇头方向吃蛋，从而使得蛇变得越来越长,点击开始游戏.</p></a>
                             </div>
                         </div>
                     </div>
@@ -168,9 +168,9 @@
     <div class="footer">
         <div class="search"><input type="text"><button>Search</button></div>
         <div class="link">
-            <a href="#"><img src="images/qq.png" alt=""></a>
-            <a href="#"><img src="images/weibo.png" alt=""></a>
-            <a href="#"><img src="images/link.png" alt=""></a>
+            <a href="http://www.qq.com/"><img src="images/qq.png" alt=""></a>
+            <a href="http://www.baidu.com/"><img src="images/weibo.png" alt=""></a>
+            <a href="https://www.360.cn/"><img src="images/link.png" alt=""></a>
             <a href="#"><img src="images/twiter.png" alt=""></a>
         </div>
         <div class="bq">
