--- a/2048.html
+++ b/2048.html
@@ -1,55 +1,46 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <meta name="viewport"
-          content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=0">
-    <title>2048</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable =no"/>
+<title>2048</title>
 
-    <link rel="stylesheet" href="CSS/reset.css">
-    <link rel="stylesheet" href="css/2048style.css">
+<link rel="stylesheet" type ="text/css" href="CSS/2048style.css" />
+
+<script type="text/javascript" src="JS/jquery.min.js"></script>
+<script type="text/javascript" src="JS/support.js"></script>
+<script type="text/javascript" src="JS/show.js"></script>
+<script type="text/javascript" src="JS/main.js"></script>
 
 </head>
-
 <body>
-<header>
-<span>2</span>
-<span>0</span>
-<span>4</span>
-<span>8</span>
-</header>
-<div class="container">
-    <div class="scores">
-        <div class="score-container best-score">
-            最佳:
-            <div class="score">
-                <div id="bestScore">0</div>
-            </div>
-        </div>
-        <div class="score-container">
-            分数:
-            <div class="score">
-                <div id="score">0</div>
-                <div class="add" id="add"></div>
-            </div>
-        </div>
-    </div>
-    <div class="game">
-        <div id="tile-container" class="tile-container"></div>
-        <div class="end" id="end">游戏结束
-            <div class="monkey">🙈</div>
-            <button class="btn not-recommended__item js-restart-btn" id="try-again">再试一次</button>
-        </div>
-    </div>
 
-    <div class="not-recommended">
-        <button class="btn not-recommended__item js-restart-btn" id="restart">重新启动游戏</button>
-        <span class="not-recommended__annotation"></span>
-    </div>
-
+<div class="header">
+    <h1>2048</h1>
+    <a href="javascript:newgame();" id="newgamebutton"  onclick="newgame()">重新开始</a>
+    <p>得分:<span id="score">0</span></p>
 </div>
 
-<script src="JS/2048index.js"></script>
+<div id="grid-container">
+    <div class="grid-cell" id="grid-cell-0-0"></div>
+    <div class="grid-cell" id="grid-cell-0-1"></div>
+    <div class="grid-cell" id="grid-cell-0-2"></div>
+    <div class="grid-cell" id="grid-cell-0-3"></div>
+
+    <div class="grid-cell" id="grid-cell-1-0"></div>
+    <div class="grid-cell" id="grid-cell-1-1"></div>
+    <div class="grid-cell" id="grid-cell-1-2"></div>
+    <div class="grid-cell" id="grid-cell-1-3"></div>
+
+    <div class="grid-cell" id="grid-cell-2-0"></div>
+    <div class="grid-cell" id="grid-cell-2-1"></div>
+    <div class="grid-cell" id="grid-cell-2-2"></div>
+    <div class="grid-cell" id="grid-cell-2-3"></div>
+
+    <div class="grid-cell" id="grid-cell-3-0"></div>
+    <div class="grid-cell" id="grid-cell-3-1"></div>
+    <div class="grid-cell" id="grid-cell-3-2"></div>
+    <div class="grid-cell" id="grid-cell-3-3"></div>
+</div>
 </body>
 </html>
