添加飞机大战游戏

--- a/index.html
+++ b/index.html
@@ -69,15 +69,15 @@
                 </div>
                 <div class="col" ontouchstart="this.classList.toggle('hover');">
                     <div class="container">
-                        <div class="front" style="background-image: url(images/3.jpg)">
+                        <div class="front" style="background-image: url(images/dfj.jpg)">
                             <div class="inner">
-                                <p>Strizzes</p>
-                                <span>Lorem ipsum</span>
+                                <p>Plane Wars</p>
+                                <span>Action Game</span>
                             </div>
                         </div>
                         <div class="back">
                             <div class="inner">
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+                                <a href="dfj.html"> <p>飞机大战是一款射击操作类游戏，操作简单，玩家众多。点击开始游戏.</p></a>
                             </div>
                         </div>
                     </div>
