背景图片优化

--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
                         <div class="front" style="background-image: url(images/4.jpg)">
                             <div class="inner">
                                 <p>Clossyo</p>
-                                <span>Lorem ipsum</span>
+                                <span>Young For You</span>
                             </div>
                         </div>
                         <div class="back">
                             <div class="inner">
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+                                <a href="2048.html"> <p>The only reliable criterion of truth is that it is always true</p></a>
                             </div>
                         </div>
                     </div>
@@ -102,12 +102,12 @@
                         <div class="front" style="background-image: url(images/5.jpg)">
                             <div class="inner">
                                 <p>Rendann</p>
-                                <span>Lorem ipsum</span>
+                                <span>Young For You</span>
                             </div>
                         </div>
                         <div class="back">
                             <div class="inner">
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+                                <a href="2048.html"> <p>The only reliable criterion of truth is that it is always true</p></a>
                             </div>
                         </div>
                     </div>
@@ -117,12 +117,12 @@
                         <div class="front" style="background-image: url(images/6.jpg)">
                             <div class="inner">
                                 <p>Reflupper</p>
-                                <span>Lorem ipsum</span>
+                                <span>Young For You</span>
                             </div>
                         </div>
                         <div class="back">
                             <div class="inner">
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+                                <a href="2048.html"> <p>The only reliable criterion of truth is that it is always true</p></a>
                             </div>
                         </div>
                     </div>
@@ -132,12 +132,12 @@
                         <div class="front" style="background-image: url(images/7.jpg)">
                             <div class="inner">
                                 <p>Acirassi</p>
-                                <span>Lorem ipsum</span>
+                                <span>Young For You</span>
                             </div>
                         </div>
                         <div class="back">
                             <div class="inner">
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+                                <a href="2048.html"> <p>The only reliable criterion of truth is that it is always true</p></a>
                             </div>
                         </div>
                     </div>
@@ -147,12 +147,12 @@
                         <div class="front" style="background-image: url(images/8.jpg)">
                             <div class="inner">
                                 <p>Sohanidd</p>
-                                <span>Lorem ipsum</span>
+                                <span>Young For You</span>
                             </div>
                         </div>
                         <div class="back">
                             <div class="inner">
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+                                <a href="2048.html"> <p>The only reliable criterion of truth is that it is always true</p></a>
                             </div>
                         </div>
                     </div>
